--- a/app/src/main/res/layout/single_music.xml
+++ b/app/src/main/res/layout/single_music.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/profile_image"
-        android:layout_width="0dp"
-        android:layout_height="333dp"
+        android:id="@+id/single_circle"
+        android:layout_width="230dp"
+        android:layout_height="230dp"
         android:layout_marginEnd="50dp"
         android:layout_marginStart="50dp"
         android:layout_marginTop="100dp"
@@ -17,7 +16,7 @@
         app:civ_border_color="#c405302e"
         app:civ_border_width="1dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,13 +24,15 @@
     <io.netopen.hotbitmapgg.library.view.RingProgressBar
         android:id="@+id/ring_progress"
         android:layout_width="0dp"
-        android:layout_height="316dp"
+        android:layout_height="0dp"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        app:layout_constraintBottom_toBottomOf="@+id/profile_image"
-        app:layout_constraintEnd_toEndOf="@+id/profile_image"
-        app:layout_constraintStart_toStartOf="@+id/profile_image"
-        app:layout_constraintTop_toTopOf="@+id/profile_image"
+        app:layout_constraintBottom_toBottomOf="@+id/single_circle"
+        app:layout_constraintEnd_toEndOf="@+id/single_circle"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/single_circle"
+        app:layout_constraintTop_toTopOf="@+id/single_circle"
+        app:layout_constraintVertical_bias="0.0"
         app:max="100"
         app:ringColor="@android:color/darker_gray"
         app:ringProgressColor="@color/colorPrimary"
