working on album song items

--- a/app/src/main/res/layout/album_lay.xml
+++ b/app/src/main/res/layout/album_lay.xml
@@ -6,11 +6,18 @@
     android:layout_height="match_parent"
     android:layout_marginTop="40dp">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/album_recyclerview"
+    <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/album_recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+
+
+    </android.support.v4.widget.NestedScrollView>
 
 </android.support.constraint.ConstraintLayout>
