--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -10,6 +10,12 @@
         android:iconTint="@android:color/background_light"
         app:actionViewClass="android.widget.SearchView" />
 
+    <item android:id="@+id/refresh"
+        android:title="refresh"
+        android:orderInCategory="1"
+        app:showAsAction="ifRoom"/>
+
+
     <item android:id="@+id/setting"
         android:title="Setting"
         android:orderInCategory="1"/>
