--- a/app/src/main/res/layout/fragment_recent.xml
+++ b/app/src/main/res/layout/fragment_recent.xml
@@ -23,7 +23,7 @@
     </android.support.v4.widget.NestedScrollView>
 
     <Button
-        android:id="@+id/more"
+        android:id="@+id/more_recent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
