fix the iamge url in popular DF

--- a/app/src/main/res/layout/cor_activity_main.xml
+++ b/app/src/main/res/layout/cor_activity_main.xml
@@ -63,5 +63,12 @@
 
     </android.support.v4.view.ViewPager>
 
+    <include
+        android:id="@+id/searchlay"
+        layout="@layout/search_lay"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="invisible" />
+
 
 </android.support.design.widget.CoordinatorLayout>
