--- a/app/src/main/res/layout/catego_recy_item.xml
+++ b/app/src/main/res/layout/catego_recy_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="135dp"
         android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp"
-        app:cardBackgroundColor="@color/colorAccent"
+        app:cardBackgroundColor="@color/album_item"
         app:cardCornerRadius="3dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -30,10 +30,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
-                android:layout_marginEnd="8dp"
                 android:layout_marginTop="8dp"
                 android:text="Music Video(Coming soon)"
                 android:textAlignment="center"
+                android:textColor="@color/cardview_light_background"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
