--- a/app/src/main/res/menu/item_menu.xml
+++ b/app/src/main/res/menu/item_menu.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <item android:id="@+id/refresh"
+        android:title="refresh"
+        android:orderInCategory="1"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_refresh2"
+        />
+
     <item
         android:id="@+id/app_bar_search"
         android:icon="@drawable/ic_search_black_24dp"
@@ -9,11 +16,6 @@
         app:showAsAction="always"
         android:iconTint="@android:color/background_light"
         app:actionViewClass="android.widget.SearchView" />
-
-    <item android:id="@+id/refresh"
-        android:title="refresh"
-        android:orderInCategory="1"
-        app:showAsAction="ifRoom"/>
 
 
     <item android:id="@+id/setting"
