fix some bugs and change some ui

--- a/app/src/main/res/layout/recyclerviewitem_seved.xml
+++ b/app/src/main/res/layout/recyclerviewitem_seved.xml
@@ -4,13 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="12dp"
     android:background="@color/Background"
-    tools:layout_editor_absoluteY="81dp">
+    android:padding="8dp"
+    tools:layout_editor_absoluteY="81dp"
+    android:id="@+id/cardViewlayout">
 
     <FrameLayout
+        android:id="@+id/framcard"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:clickable="true">
 
         <android.support.v7.widget.CardView
             android:id="@+id/cardView"
@@ -22,47 +26,49 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <android.support.constraint.ConstraintLayout
+                android:id="@+id/conscard"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:background="?attr/selectableItemBackground"
+                android:clickable="true">
 
                 <ImageView
                     android:id="@+id/artist_imageView"
-                    android:layout_width="180dp"
-                    android:layout_height="190dp"
+                    android:layout_width="190dp"
+                    android:layout_height="200dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/omidnb"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/artist_txtv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="102dp"
+                    android:layout_height="17dp"
                     android:layout_marginBottom="8dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="24dp"
                     android:layout_marginTop="8dp"
                     android:gravity="end"
                     android:singleLine="true"
                     android:text="Omid biglary"
                     android:textAlignment="viewStart"
                     android:textColor="@color/cardview_light_background"
-                    android:textDirection="ltr"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@+id/det_img"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/song_txtv"
-                    app:layout_constraintVertical_bias="0.0" />
+                    app:layout_constraintVertical_bias="0.0"
+                    android:layout_marginRight="8dp"
+                    tools:ignore="RtlCompat" />
 
                 <TextView
                     android:id="@+id/song_txtv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="125dp"
+                    android:layout_height="16dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="14dp"
                     android:gravity="end"
                     android:singleLine="true"
                     android:text="Delbar"
@@ -72,7 +78,10 @@
                     app:layout_constraintEnd_toStartOf="@+id/fav_img"
                     app:layout_constraintHorizontal_bias="0.156"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView" />
+                    app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
+                    android:layout_marginRight="8dp"
+                    android:layout_marginLeft="4dp"
+                    tools:ignore="RtlCompat" />
 
                 <ImageButton
                     android:id="@+id/fav_img"
@@ -87,7 +96,8 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/artist_imageView"
                     app:layout_constraintVertical_bias="1.0"
-                    app:srcCompat="@drawable/ic_not_fave" />
+                    app:srcCompat="@drawable/ic_not_fave"
+                    android:layout_marginRight="4dp" />
 
                 <ImageButton
                     android:id="@+id/det_img"
@@ -95,11 +105,44 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:layout_marginEnd="4dp"
-                    android:background="@android:color/transparent"
+                    android:background="?attr/selectableItemBackground"
+                    android:clickable="true"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/fav_img"
-                    app:srcCompat="@drawable/ic_details" />
+                    app:srcCompat="@drawable/ic_details"
+                    android:layout_marginRight="4dp" />
+
+                <TextView
+                    android:id="@+id/tap_image"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/tap_text_round"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="Tap for Image"
+                    android:textAlignment="center"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="@+id/artist_imageView"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="@+id/artist_imageView"
+                    app:layout_constraintTop_toTopOf="@+id/artist_imageView" />
+
+                <TextView
+                    android:id="@+id/album_item_txt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/below_shadow"
+                    android:foreground="@drawable/above_shadow"
+                    android:padding="2dp"
+                    android:text="Allbum"
+                    android:textColor="@color/cardview_light_background"
+                    android:textSize="17sp"
+                    android:visibility="invisible"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
         </android.support.v7.widget.CardView>
