--- a/app/src/main/res/layout/catego_second_lay.xml
+++ b/app/src/main/res/layout/catego_second_lay.xml
@@ -30,8 +30,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/category_recyclerView_sec"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/colorPrimary" />
+            android:layout_height="match_parent" />
 
 
     </android.support.v4.widget.NestedScrollView>
