--- a/app/src/main/res/layout/popular_recy_item.xml
+++ b/app/src/main/res/layout/popular_recy_item.xml
@@ -39,8 +39,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:gravity="center_vertical"
-        android:singleLine="true"
+        android:singleLine="false"
         android:text="TextView"
+        android:textAlignment="textEnd"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
