--- a/app/src/main/res/layout/slide_toolbar.xml
+++ b/app/src/main/res/layout/slide_toolbar.xml
@@ -31,37 +31,41 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/omidnb" />
+            android:src="@drawable/ic_music" />
     </android.support.v7.widget.CardView>
 
     <TextView
         android:id="@+id/song_text_small"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="16dp"
-        android:text="Delbar"
+        android:layout_marginTop="8dp"
         android:textColor="@color/defaultTabTextColor"
         android:textSize="17sp"
+        app:layout_constraintEnd_toStartOf="@+id/small_button"
+        app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toEndOf="@+id/small_img"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/artist_text_small"
-        android:layout_width="129dp"
-        android:layout_height="21dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
-        android:text="Omid Biglary"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="50dp"
         android:textColor="@color/defaultTabTextColor"
-        app:layout_constraintStart_toEndOf="@+id/song_text_small"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/small_button"
+        app:layout_constraintStart_toEndOf="@+id/small_img"
+        app:layout_constraintTop_toBottomOf="@+id/song_text_small" />
 
     <ProgressBar
         android:id="@+id/progresbar_small"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:translationY="-6dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toEndOf="@+id/small_img"
@@ -76,7 +80,9 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/progresbar_small"
-        app:srcCompat="@drawable/ic_play" />
+        app:srcCompat="@drawable/ic_play"
+        tools:ignore="VectorDrawableCompat"
+        android:layout_marginRight="16dp" />
 
 
 
